--- a/app/partials/modals/users.html
+++ b/app/partials/modals/users.html
@@ -22,7 +22,7 @@
                                                                   style="width: 75px;height: 75px"></a>
                                 </div>
                                 <div style="padding-left: 95px">
-                                    <a href="{{user.route}}" ng-click="hideModal()">{{user.profile.alias}}</a>
+                                    <a href="{{user.route}}" ng-click="hideModal()"><span style="overflow: hidden">{{user.profile.alias}}</span></a>
 
                                     <div style="padding-top: 5px">
                                         <span title="{{user.userSocial.sounds}}条声音" class="ng-binding">{{user.userSocial.sounds}}
