--- a/app/partials/soundDetail.html
+++ b/app/partials/soundDetail.html
@@ -4,7 +4,7 @@
 
 <div class="row" style="margin: 0px;padding-top: 20px;">
 <div class="col-md-2"></div>
-<div class="col-md-8" style="padding-right: 0px; padding-left: 0px;">
+<div class="col-md-8" style="padding-right: 0px; padding-left: 0px;{{deviceEnv=='xs'?'':'width:800px'}}">
 <div id="sound_streams">
     <ng-include src="'partials/sound.html'"></ng-include>
 </div>
